# ComfyUI-Blender

./: .gitignore  CHANGES_SUMMARY.md  README.md  __init__.py  blender_plugin.py  input_nodes.py  output_nodes.py  pyproject.toml  workflow_converter.py
comfyui_blender/: README.md  __init__.py  connection.py  connection_krita.py  hooks.py  settings.py  utils.py  vendorize.toml  workflow.py
comfyui_blender_plugin/: __init__.py  settings.py  utils.py
example_workflows/: ComfyUI Blender Img2Img.json  ComfyUI Blender Txt2Img.json  Comfyui Blender ControlNet.json  Flux Depth LoRA.json  Flux Depth LoRA.json.api  Flux Img2Img.json  Flux Img2Img.json.api  Flux Texture Image.json  Flux Texture Image.json.api  Flux Txt2Img.json  Flux Txt2Img.json.api  Hunyuan3D v2.json  Hunyuan3D v2.json.api  Qwen Image ControlNet.json  Qwen Image ControlNet.json.api  Qwen Image Edit 2509 Nunchaku.json  Qwen Image Edit 2509 Nunchaku.json.api  Qwen Image Inpainting.json  Qwen Image Inpainting.json.api  SDXL ControlNet Depth.json  SDXL ControlNet.json  SDXL ControlNet.json.api  SDXL Img2Img.json  SDXL Img2Img.json.api  SDXL Texture Image.jpg-autosave.kra  SDXL Texture Image.json  SDXL Texture Image.json.api  SDXL Txt2Img.json  SDXL Txt2Img.json.api  Stable3DGen Img23d.json  Stable3DGen Img23d.json.api  Z-Image Turbo ControlNet.json  Z-Image Turbo Img2Img.json  Z-Image Turbo Txt2Img.json  comfyui_blender.json  comfyui_blender_img2img.json  comfyui_blender_txt2img.json
js/: blender_input_combo.js  blender_output_string.js
nodes/: __init__.py  blender_input_boolean.py  blender_input_combo.py  (+18 more)
(+83 files in other folders)
