[project]
name = "comfyui-blender"
description = "Custom nodes and add-on to use ComfyUI from Blender."
version = "v0.12.0"
license = { text = "GPL-3.0 license" }
dependencies = []

[project.urls]
Repository = "https://github.com/alexisrolland/ComfyUI-Blender"

[tool.comfy]
PublisherId = "alexisrolland"
DisplayName = "ComfyUI-Blender"
Icon = "https://github.com/alexisrolland/ComfyUI-Blender-Doc/blob/main/assets/comfyui_blender.png"