[project]
name = "comfyui-blender"
description = "Custom nodes and add-on to use ComfyUI from Blender."
version = "v3.1.0"
license = { text = "GPL-3.0 license" }
dependencies = []

[project.urls]
Repository = "https://github.com/alexisrolland/ComfyUI-Blender"

[tool.comfy]
PublisherId = "alexisrolland"
DisplayName = "ComfyUI-Blender"
Icon = "https://raw.githubusercontent.com/alexisrolland/ComfyUI-Blender-Doc/2ef47b6e54396ec5238ade09cf70fa4f28fcbd6f/assets/comfyui_blender.png"
